--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,308 @@
-fastapi==0.115.6
-opencv-python-headless==4.10.0.84
-pydantic==2.10.1
-ray[serve]==2.40.0
-requests==2.32.3
-ultralytics==8.3.51
-python-multipart==0.0.20
-gdown
-scikit-learn
-pygments
-pexpect
-timm
+adlfs                              2023.8.0
+aiofiles                           22.1.0
+aiohappyeyeballs                   2.6.1
+aiohttp                            3.11.16
+aiohttp-cors                       0.7.0
+aiosignal                          1.3.1
+aiosqlite                          0.19.0
+amqp                               5.3.1
+annotated-doc                      0.0.4
+annotated-types                    0.6.0
+anyio                              3.7.1
+anyscale                           0.26.67
+archspec                           0.2.5
+argon2-cffi                        23.1.0
+argon2-cffi-bindings               21.2.0
+arrow                              1.3.0
+asttokens                          2.4.1
+async-timeout                      4.0.3
+attrs                              25.1.0
+azure-common                       1.1.28
+azure-core                         1.29.5
+azure-datalake-store               0.0.53
+azure-identity                     1.17.1
+azure-storage-blob                 12.22.0
+Babel                              2.13.1
+backcall                           0.2.0
+beautifulsoup4                     4.11.1
+billiard                           4.2.1
+bleach                             6.1.0
+boltons                            24.0.0
+boto3                              1.29.7
+botocore                           1.32.7
+Brotli                             1.2.0
+cachetools                         5.5.2
+celery                             5.5.3
+certifi                            2025.1.31
+cffi                               1.17.1
+charset-normalizer                 3.3.2
+click                              8.1.7
+click-didyoumean                   0.3.1
+click-plugins                      1.1.1.2
+click-repl                         0.3.0
+cloudpickle                        2.2.0
+colorama                           0.4.6
+colorful                           0.5.5
+comm                               0.2.0
+conda                              25.11.0
+conda-libmamba-solver              25.11.0
+conda-package-handling             2.4.0
+conda_package_streaming            0.11.0
+contourpy                          1.3.2
+cryptography                       44.0.3
+cupy-cuda12x                       13.4.0
+cycler                             0.12.1
+Cython                             0.29.37
+debugpy                            1.8.0
+decorator                          5.1.1
+defusedxml                         0.7.1
+distlib                            0.3.7
+distro                             1.9.0
+dm-tree                            0.1.8
+entrypoints                        0.4
+exceptiongroup                     1.3.0
+executing                          2.0.1
+Farama-Notifications               0.0.4
+fastapi                            0.121.0
+fastjsonschema                     2.19.0
+fastrlock                          0.8.3
+filelock                           3.17.0
+flatbuffers                        23.5.26
+fonttools                          4.61.1
+fqdn                               1.5.1
+frozendict                         2.4.7
+frozenlist                         1.4.1
+fsspec                             2023.12.1
+gitdb                              4.0.11
+GitPython                          3.1.44
+google-api-core                    2.24.2
+google-api-python-client           2.111.0
+google-auth                        2.23.4
+google-auth-httplib2               0.1.1
+google-cloud-certificate-manager   1.10.2
+google-cloud-common                1.5.2
+google-cloud-compute               1.37.0
+google-cloud-core                  2.4.1
+google-cloud-filestore             1.13.2
+google-cloud-redis                 2.18.1
+google-cloud-resource-manager      1.14.2
+google-cloud-secret-manager        2.24.0
+google-cloud-storage               2.14.0
+google-crc32c                      1.5.0
+google-oauth                       1.0.1
+google-resumable-media             2.6.0
+googleapis-common-protos           1.61.0
+grpc-google-iam-v1                 0.14.2
+grpcio                             1.74.0
+grpcio-status                      1.62.3
+grpcio-tools                       1.62.3
+gymnasium                          1.1.1
+h11                                0.16.0
+h2                                 4.1.0
+hf-xet                             1.2.0
+hpack                              4.0.0
+httpcore                           1.0.9
+httplib2                           0.20.4
+httptools                          0.7.1
+httpx                              0.28.1
+huggingface_hub                    1.2.3
+humanize                           4.12.1
+hyperframe                         6.0.1
+idna                               3.7
+importlib-metadata                 6.11.0
+ipykernel                          6.27.1
+ipython                            8.12.3
+ipython-genutils                   0.2.0
+ipywidgets                         8.1.3
+isodate                            0.6.1
+isoduration                        20.11.0
+jedi                               0.19.1
+Jinja2                             3.1.6
+jmespath                           1.0.1
+json5                              0.9.14
+jsonpatch                          1.32
+jsonpointer                        2.4
+jsonschema                         4.23.0
+jsonschema-specifications          2024.10.1
+jupyter-client                     7.3.4
+jupyter_core                       5.5.0
+jupyter-events                     0.6.3
+jupyter-server                     1.24.0
+jupyter_server_fileid              0.9.0
+jupyter_server_terminals           0.4.4
+jupyter_server_ydoc                0.6.1
+jupyter-ydoc                       0.2.5
+jupyterlab                         3.6.1
+jupyterlab_pygments                0.3.0
+jupyterlab_server                  2.24.0
+jupyterlab_widgets                 3.0.11
+kiwisolver                         1.4.9
+kombu                              5.5.4
+libmambapy                         2.4.0
+linkify-it-py                      2.0.3
+log-symbols                        0.0.14
+lxml                               6.0.2
+lz4                                4.4.5
+markdown-it-py                     2.2.0
+MarkupSafe                         2.1.3
+matplotlib                         3.10.8
+matplotlib-inline                  0.1.6
+mdit-py-plugins                    0.3.5
+mdurl                              0.1.2
+memray                             1.19.1
+menuinst                           2.4.1
+mistune                            0.8.4
+mpmath                             1.3.0
+msal                               1.28.1
+msal-extensions                    1.2.0b1
+msgpack                            1.0.7
+multidict                          6.0.5
+nbclassic                          1.0.0
+nbclient                           0.5.13
+nbconvert                          6.5.4
+nbformat                           5.9.2
+nest-asyncio                       1.5.8
+networkx                           3.4.2
+notebook                           6.5.7
+notebook_shim                      0.2.3
+numpy                              1.26.4
+nvidia-cublas-cu12                 12.8.4.1
+nvidia-cuda-cupti-cu12             12.8.90
+nvidia-cuda-nvrtc-cu12             12.8.93
+nvidia-cuda-runtime-cu12           12.8.90
+nvidia-cudnn-cu12                  9.10.2.21
+nvidia-cufft-cu12                  11.3.3.83
+nvidia-cufile-cu12                 1.13.1.3
+nvidia-curand-cu12                 10.3.9.90
+nvidia-cusolver-cu12               11.7.3.90
+nvidia-cusparse-cu12               12.5.8.93
+nvidia-cusparselt-cu12             0.7.1
+nvidia-nccl-cu12                   2.27.5
+nvidia-nvjitlink-cu12              12.8.93
+nvidia-nvshmem-cu12                3.3.20
+nvidia-nvtx-cu12                   12.8.90
+oauth2client                       4.1.3
+opencensus                         0.11.4
+opencensus-context                 0.1.3
+opencv-python                      4.11.0.86
+opencv-python-headless             4.12.0.88
+opentelemetry-api                  1.34.1
+opentelemetry-exporter-prometheus  0.55b1
+opentelemetry-proto                1.27.0
+opentelemetry-sdk                  1.34.1
+opentelemetry-semantic-conventions 0.55b1
+ormsgpack                          1.7.0
+packaging                          24.2
+pandas                             1.5.3
+pandocfilters                      1.5.0
+parso                              0.8.3
+pathspec                           0.11.2
+pexpect                            4.8.0
+pickleshare                        0.7.5
+pillow                             12.0.0
+pip                                24.3.1
+platformdirs                       3.11.0
+pluggy                             1.5.0
+polars                             1.36.1
+polars-runtime-32                  1.36.1
+portalocker                        2.8.2
+prometheus-client                  0.19.0
+prompt-toolkit                     3.0.41
+propcache                          0.3.0
+proto-plus                         1.22.3
+protobuf                           4.25.8
+psutil                             5.9.6
+ptyprocess                         0.7.0
+pure-eval                          0.2.2
+py-spy                             0.4.0
+pyarrow                            19.0.1
+pyasn1                             0.5.1
+pyasn1-modules                     0.3.0
+pycosat                            0.6.6
+pycparser                          2.21
+pydantic                           2.12.4
+pydantic_core                      2.41.5
+Pygments                           2.18.0
+PyJWT                              2.8.0
+pyOpenSSL                          25.0.0
+pyparsing                          3.1.1
+PySocks                            1.7.1
+python-dateutil                    2.8.2
+python-dotenv                      1.2.1
+python-json-logger                 2.0.7
+python-multipart                   0.0.20
+pytz                               2022.7.1
+PyYAML                             6.0.3
+pyzmq                              27.1.0
+ray                                3.0.0.dev0
+referencing                        0.36.2
+requests                           2.32.5
+rfc3339-validator                  0.1.4
+rfc3986-validator                  0.1.1
+rich                               13.7.1
+rpds-py                            0.22.3
+rsa                                4.7.2
+ruamel.yaml                        0.18.16
+ruamel.yaml.clib                   0.2.14
+s3transfer                         0.8.0
+safetensors                        0.7.0
+scipy                              1.15.3
+Send2Trash                         1.8.3
+setuptools                         80.9.0
+shellingham                        1.5.4
+six                                1.16.0
+smart-open                         6.2.0
+smmap                              5.0.1
+sniffio                            1.3.1
+soupsieve                          2.5
+spinners                           0.0.24
+stack-data                         0.6.3
+starlette                          0.49.1
+sympy                              1.14.0
+tabulate                           0.9.0
+tensorboardX                       2.6.2.2
+termcolor                          2.4.0
+terminado                          0.18.1
+textual                            4.0.0
+timm                               1.0.22
+tinycss2                           1.3.0
+tomli                              2.0.1
+torch                              2.9.1
+torchaudio                         2.9.1+cu126
+torchvision                        0.24.1
+tornado                            6.1
+tqdm                               4.67.1
+traitlets                          5.14.3
+triton                             3.5.1
+truststore                         0.10.0
+typer-slim                         0.20.0
+types-python-dateutil              2.9.0.20240316
+typing_extensions                  4.15.0
+typing-inspection                  0.4.2
+tzdata                             2025.2
+tzlocal                            5.3
+uc-micro-py                        1.0.3
+ultralytics                        8.3.239
+ultralytics-thop                   2.0.18
+uri-template                       1.3.0
+uritemplate                        4.1.1
+urllib3                            1.26.19
+uvicorn                            0.22.0
+uvloop                             0.21.0
+vine                               5.1.0
+virtualenv                         20.29.1
+watchfiles                         0.19.0
+wcwidth                            0.2.13
+webcolors                          24.6.0
+webencodings                       0.5.1
+websocket-client                   1.8.0
+websockets                         11.0.3
+wheel                              0.45.1
+widgetsnbextension                 4.0.11
+wrapt                              1.14.1
+y-py                               0.6.2
+yarl                               1.18.3
+ypy-websocket                      0.8.4
+zipp                               3.19.2
+zstandard                          0.25.0
 streamlit
